syntax = "proto3";
option csharp_namespace = "ControlService.Protos";
service HControl {
	rpc Create(CreateRequest) returns (CreateReply);
	rpc Delete(DeleteRequest) returns (DeleteReply);
	rpc Get(GetRequest) returns (GetReply);
	rpc Update(UpdateRequest) returns (UpdateReply);
	rpc CheckValue(CheckValueRequest) returns (CheckValueReply);
	rpc GetDate(GetDateRequest) returns (GetDateReply);
	rpc GateInterval(GateIntervalRequest) returns (GateIntervalReply);
}

message CreateRequest {
	int32 PostCode = 1;
	int32 Type = 2;
	string Datestart = 3;
	int32 Value = 4;
}
message CreateReply{
	bool IsCreated = 1;
}

message DeleteRequest {
	int32 Id = 1;
}
message DeleteReply {
	bool IsDeleted = 1;
}

message GetRequest {
	int32 PostCode = 1;
	int32 Type = 2;
	int32 Page = 3;
}
message GetReply{
	repeated HydrologyControl HydrologyControls = 1; 
}

message UpdateRequest{
	repeated HydrologyControl HydrologyControls = 1; 
	string Datestart = 2;
	string Dateend = 3;
	int32 PostCode = 4;
	int32 Type = 5;
}
message UpdateReply{
	bool IsUpdated = 1;
}

message CheckValueRequest{
	string Date = 1;
	int32 PostCode = 2;
	int32 Value = 3;
}
message CheckValueReply{
	int32 Type = 1;
}

message GetDateRequest{
	int PostCode = 1;
	string Date = 2;
}
message GetDateReply{
	repeated int32 Values = 1;
}

message GateIntervalRequest{
	int32 PostCode = 1;
	string Datestart = 2;
	string Dateend = 3;
}
message GateIntervalReply{

}














