syntax = "proto3";
option csharp_namespace = "ControlService.Protos";
import "google/protobuf/timestamp.proto";

message GetNFAD
{
    string id = 1;
    uint32 post_code = 2;
    ControlType type = 3;
    google.protobuf.Timestamp date_start = 4;
    google.protobuf.Timestamp date_end = 5;
    uint32 value = 6;
}

message NFAD {
    string id = 1;
    uint32 post_code = 2;
    ControlType type = 3;
    google.protobuf.Timestamp date_start = 4;
    string prev_id = 5;
    string next_id = 6;
    uint32 value = 7;
}

message AllNFAD {
    google.protobuf.Timestamp date = 1;
    uint32 norm = 2;
    uint32 floodplain = 3;
    uint32 adverse = 4;
    uint32 dangerous = 5;
}

enum ControlType {
    NONE = 0;
    NORM = 1;
    FLOODPLAIN = 2;
    ADVERSE = 3;
    DANGEROUS = 4;
}

message CreateRequest {
    uint32 post_code = 1;
    ControlType type = 2;
    google.protobuf.Timestamp date_start = 3;
    uint32 value = 4;
}

message CreateResponse {
    GetNFAD nfad = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    bool success = 1;
}

message UpdateRequest {
    repeated NFAD data = 1; 
}

message UpdateResponse {
    repeated NFAD data = 1; 
}

message GetRequest {
    uint32 post_code = 1;
    ControlType type = 2;
    uint32 page = 3; 
}
message GetResponse {
    uint32 page = 1;
    uint32 max_page = 2;
    repeated GetNFAD data = 3;
}

message CheckValueRequest {
    google.protobuf.Timestamp date = 1;
    uint32 post_code = 2;
    uint32 value = 3;
}
message CheckValueResponse {
    uint32 excess = 1;
}

message GetDateRequest {
    uint32 post_code = 1;
    google.protobuf.Timestamp date = 2;
}
message GetDateResponse {
    AllNFAD data = 1;
}

message GetIntervalRequest {
    uint32 post_code = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
}

message GetIntervalResponse {
    repeated AllNFAD data = 1;
}

service HydrologyControlService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc CheckValue(CheckValueRequest) returns (CheckValueResponse);
    rpc GetDate(GetDateRequest) returns (GetDateResponse);
    rpc GetInterval(GetIntervalRequest) returns (GetIntervalResponse);
}